--- a/src/app/pets/pet-container/pet-container.component.scss
+++ b/src/app/pets/pet-container/pet-container.component.scss
@@ -1,6 +1,7 @@
 .container {
     display: grid;
-    grid-template-columns: 1fr .5fr 1fr;
+    grid-template-columns: 1fr .25fr 1fr;
+    margin: 5em 10%;
 
     .pet-list {
         grid-column: 1 / 2;
