--- a/src/app/appointments/appointment-detail/appointment-detail.component.html
+++ b/src/app/appointments/appointment-detail/appointment-detail.component.html
@@ -1,6 +1,7 @@
 <mat-card>
   <mat-card-title>Appointment Details</mat-card-title>
   <mat-divider></mat-divider>
+  <ng-template *ngIf="appt">
   <mat-card-content>
   <mat-list>
     <mat-list-item>Date: {{appt.date | date}}</mat-list-item>
@@ -13,6 +14,7 @@
   </mat-list>
   
 </mat-card-content>
+</ng-template>
   
 
 
